# lf-pinn-harmonic-oscillator

./: .gitignore  .output.txt  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml  repo-to-txt.py  requirements.txt
artifacts/: example.md  figures.md  notes.md
notebooks/: demo.ipynb  demo_old.ipynb  ground_truth_vs_learned_phase_space_trajectories.ipynb
references/: references.bib
src/: model.py  physics.py  train.py  utils.py
